--- a/Chp 13/Chp 13.vcxproj.filters
+++ b/Chp 13/Chp 13.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="read_hw.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Intl.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="grade.h">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Grad.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Intl.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
